未来エリアに飛ぶときの演出の仮

--- a/C++Team001.vcxproj.filters
+++ b/C++Team001.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="ソース ファイル\06_Game">
       <UniqueIdentifier>{3d02e5a1-14af-4321-a536-bbe3d9c1e176}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\07_Object">
+      <UniqueIdentifier>{5607d2da-08c2-404f-9789-90b1810d1cde}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\effect.cpp">
@@ -46,18 +49,6 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\Motion.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Object.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Object2D.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Object3D.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ObjectX.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\Particle.cpp">
@@ -90,9 +81,6 @@
     <ClCompile Include="src\Camera.cpp">
       <Filter>ソース ファイル\02_Camera</Filter>
     </ClCompile>
-    <ClCompile Include="src\ObjectList.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="src\SkillGauge.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -103,9 +91,6 @@
       <Filter>ソース ファイル\01_Mode</Filter>
     </ClCompile>
     <ClCompile Include="BgStage.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ObjectXOriginalList.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\input.cpp">
@@ -192,6 +177,27 @@
     <ClCompile Include="src\MapSelect.cpp">
       <Filter>ソース ファイル\01_Mode</Filter>
     </ClCompile>
+    <ClCompile Include="src\Object.cpp">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Object2D.cpp">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Object3D.cpp">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ObjectList.cpp">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ObjectX.cpp">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ObjectXOriginalList.cpp">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\future_block.cpp">
+      <Filter>ソース ファイル\05_Map</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BgStage.h">
@@ -219,24 +225,6 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\Motion.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Object.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Object2D.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Object3D.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\ObjectList.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\ObjectX.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\ObjectXOriginalList.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\Particle.h">
@@ -358,6 +346,27 @@
     </ClInclude>
     <ClInclude Include="src\MapSelect.h">
       <Filter>ソース ファイル\01_Mode</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Object.h">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Object2D.h">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Object3D.h">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ObjectList.h">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ObjectX.h">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ObjectXOriginalList.h">
+      <Filter>ソース ファイル\07_Object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\future_block.h">
+      <Filter>ソース ファイル\05_Map</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
