--- a/C++Team001.vcxproj.filters
+++ b/C++Team001.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClCompile Include="src\MapSelect.cpp">
       <Filter>ソース ファイル\01_Mode</Filter>
     </ClCompile>
+    <ClCompile Include="src\Bg.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BgStage.h">
@@ -358,6 +361,9 @@
     </ClInclude>
     <ClInclude Include="src\MapSelect.h">
       <Filter>ソース ファイル\01_Mode</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Bg.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
