--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="src\input\inputkeyboard.cpp" />
     <ClCompile Include="src\input\inputmouse.cpp" />
     <ClCompile Include="src\Item.cpp" />
+    <ClCompile Include="src\Item_Bom.cpp" />
     <ClCompile Include="src\Item_Paint.cpp" />
     <ClCompile Include="src\Item_Speed.cpp" />
     <ClCompile Include="src\Letter.cpp" />
@@ -249,6 +250,7 @@
     <ClInclude Include="src\input\inputkeydata.h" />
     <ClInclude Include="src\input\inputmouse.h" />
     <ClInclude Include="src\Item.h" />
+    <ClInclude Include="src\Item_Bom.h" />
     <ClInclude Include="src\Item_Paint.h" />
     <ClInclude Include="src\Item_Speed.h" />
     <ClInclude Include="src\Letter.h" />
