--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -162,9 +162,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BgStage.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\area.cpp" />
+    <ClCompile Include="src\area_warning.cpp" />
     <ClCompile Include="src\Bg.cpp" />
     <ClCompile Include="src\Block.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -224,9 +224,9 @@
     <ClCompile Include="src\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BgStage.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\area.h" />
+    <ClInclude Include="src\area_warning.h" />
     <ClInclude Include="src\Bg.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Camera.h" />
