--- a/C++Team001.vcxproj.filters
+++ b/C++Team001.vcxproj.filters
@@ -222,6 +222,9 @@
     <ClCompile Include="src\CameraResult.cpp">
       <Filter>ソース ファイル\02_Camera</Filter>
     </ClCompile>
+    <ClCompile Include="src\sky_bg.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Command.h">
@@ -409,6 +412,9 @@
     </ClInclude>
     <ClInclude Include="src\CameraResult.h">
       <Filter>ソース ファイル\02_Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sky_bg.h">
+      <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
