--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="src\Particle.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\PlayerController.cpp" />
+    <ClCompile Include="src\pouse_ui.cpp" />
     <ClCompile Include="src\Precompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -278,6 +279,7 @@
     <ClInclude Include="src\Particle.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\PlayerController.h" />
+    <ClInclude Include="src\pouse_ui.h" />
     <ClInclude Include="src\Precompile.h" />
     <ClInclude Include="src\renderer.h" />
     <ClInclude Include="src\Result.h" />
