--- a/C++Team001.vcxproj.filters
+++ b/C++Team001.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClCompile Include="src\Letter.cpp">
       <Filter>ソース ファイル\00_Main</Filter>
     </ClCompile>
-    <ClCompile Include="src\Precompile.cpp">
-      <Filter>ソース ファイル\00_Main</Filter>
-    </ClCompile>
     <ClCompile Include="src\sound.cpp">
       <Filter>ソース ファイル\00_Main</Filter>
     </ClCompile>
@@ -233,6 +230,9 @@
     </ClCompile>
     <ClCompile Include="src\pouse_ui.cpp">
       <Filter>ソース ファイル\09_UI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Precompile.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
