--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="src\area_warning.cpp" />
     <ClCompile Include="src\Bg.cpp" />
     <ClCompile Include="src\Block.cpp" />
+    <ClCompile Include="src\Bom.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\CameraGame.cpp" />
     <ClCompile Include="src\CameraResult.cpp" />
@@ -235,6 +236,7 @@
     <ClInclude Include="src\area_warning.h" />
     <ClInclude Include="src\Bg.h" />
     <ClInclude Include="src\Block.h" />
+    <ClInclude Include="src\Bom.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\CameraGame.h" />
     <ClInclude Include="src\CameraResult.h" />
