競合の解決

--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="src\Fade.cpp" />
     <ClCompile Include="src\File.cpp" />
     <ClCompile Include="src\Floor.cpp" />
+    <ClCompile Include="src\future_signs.cpp" />
     <ClCompile Include="src\go_future_block.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\input.cpp" />
@@ -251,6 +252,7 @@
     <ClInclude Include="src\Fade.h" />
     <ClInclude Include="src\File.h" />
     <ClInclude Include="src\Floor.h" />
+    <ClInclude Include="src\future_signs.h" />
     <ClInclude Include="src\go_future_block.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\input.h" />
