--- a/C++Team001.vcxproj.filters
+++ b/C++Team001.vcxproj.filters
@@ -43,6 +43,12 @@
     <Filter Include="ソース ファイル\20_FILE">
       <UniqueIdentifier>{12cc9b25-4683-442c-83bb-3d0f5e92020b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\05_Map\block">
+      <UniqueIdentifier>{32350378-d219-4402-a775-bbd85683fb30}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\05_Map\block\Decorator">
+      <UniqueIdentifier>{b44baec8-c94e-43e7-807d-3532403a1dbd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\effect.cpp">
@@ -126,9 +132,6 @@
     <ClCompile Include="src\area.cpp">
       <Filter>ソース ファイル\05_Map</Filter>
     </ClCompile>
-    <ClCompile Include="src\Block.cpp">
-      <Filter>ソース ファイル\05_Map</Filter>
-    </ClCompile>
     <ClCompile Include="src\Floor.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -164,12 +167,6 @@
     </ClCompile>
     <ClCompile Include="src\Bg.cpp">
       <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\go_future_block.cpp">
-      <Filter>ソース ファイル\05_Map</Filter>
-    </ClCompile>
-    <ClCompile Include="src\come_future_block.cpp">
-      <Filter>ソース ファイル\05_Map</Filter>
     </ClCompile>
     <ClCompile Include="src\Item_Bom.cpp">
       <Filter>ソース ファイル\04_Item</Filter>
@@ -233,6 +230,18 @@
     </ClCompile>
     <ClCompile Include="src\Precompile.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Block.cpp">
+      <Filter>ソース ファイル\05_Map\block</Filter>
+    </ClCompile>
+    <ClCompile Include="src\come_future_block.cpp">
+      <Filter>ソース ファイル\05_Map\block\Decorator</Filter>
+    </ClCompile>
+    <ClCompile Include="src\go_future_block.cpp">
+      <Filter>ソース ファイル\05_Map\block\Decorator</Filter>
+    </ClCompile>
+    <ClCompile Include="src\future_signs.cpp">
+      <Filter>ソース ファイル\05_Map\block\Decorator</Filter>
     </ClCompile>
     <ClCompile Include="src\Bom.cpp">
       <Filter>ソース ファイル\04_Item</Filter>
@@ -332,9 +341,6 @@
     <ClInclude Include="src\area.h">
       <Filter>ソース ファイル\05_Map</Filter>
     </ClInclude>
-    <ClInclude Include="src\Block.h">
-      <Filter>ソース ファイル\05_Map</Filter>
-    </ClInclude>
     <ClInclude Include="src\Floor.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
@@ -370,12 +376,6 @@
     </ClInclude>
     <ClInclude Include="src\Bg.h">
       <Filter>ソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\go_future_block.h">
-      <Filter>ソース ファイル\05_Map</Filter>
-    </ClInclude>
-    <ClInclude Include="src\come_future_block.h">
-      <Filter>ソース ファイル\05_Map</Filter>
     </ClInclude>
     <ClInclude Include="src\Item_Bom.h">
       <Filter>ソース ファイル\04_Item</Filter>
@@ -436,6 +436,18 @@
     </ClInclude>
     <ClInclude Include="src\pouse_ui.h">
       <Filter>ソース ファイル\09_UI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Block.h">
+      <Filter>ソース ファイル\05_Map\block</Filter>
+    </ClInclude>
+    <ClInclude Include="src\come_future_block.h">
+      <Filter>ソース ファイル\05_Map\block\Decorator</Filter>
+    </ClInclude>
+    <ClInclude Include="src\future_signs.h">
+      <Filter>ソース ファイル\05_Map\block\Decorator</Filter>
+    </ClInclude>
+    <ClInclude Include="src\go_future_block.h">
+      <Filter>ソース ファイル\05_Map\block\Decorator</Filter>
     </ClInclude>
     <ClInclude Include="src\Bom.h">
       <Filter>ソース ファイル\04_Item</Filter>
